Fixed footer issue: Where the items went out of screen

--- a/Components/Container/Container.module.css
+++ b/Components/Container/Container.module.css
@@ -1,7 +1,6 @@
 .Munyyb {
-  height: 100vh;
-  max-height: -webkit-fill-available;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
 }
 .MunyybContainer {
   height: 100%;
