--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,6 +22,8 @@ body {
   overflow: hidden;
   position: fixed;
   top: 0;
+  height: 100%;
+  width: 100%;
 }
 
 * {
